plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id "io.ebean" version "13.14.0"
}

repositories {
    maven { url "https://reposilite.appleptr16.com/appleptr16" }
    mavenCentral()
}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

ebean {
    debugLevel 0
}

project.group groupValue
project.version versionValue

configurations {
    configureEach {
        resolutionStrategy.cacheDynamicVersionsFor 1, 'seconds'
        resolutionStrategy.cacheChangingModulesFor 1, 'seconds'
    }
}

project.ext.ebean_version = '13.17.4'
// https://search.maven.org/search?q=g:io.ebean
dependencies {
    // sql
    annotationProcessor "io.ebean:ebean-querybean:${ebean_version}"
    annotationProcessor "io.ebean:querybean-generator:${ebean_version}"
    implementation "io.ebean:ebean-querybean:${ebean_version}"
    implementation "io.ebean:ebean-postgres:${ebean_version}"
    // sql driver
    implementation 'org.postgresql:postgresql:42.5.4'

    // migration
    implementation "io.ebean:ebean-ddl-generator:${ebean_version}"
    implementation 'io.ebean:ebean-migration:13.11.1'
    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"

    //json
    implementation "io.ebean:ebean-jackson-mapper:${ebean_version}"
    implementation "io.ebean:ebean-jackson-jsonnode:${ebean_version}"
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'

    // logging
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'

    // for BigDecimal exponents
    implementation 'ch.obermuhlner:big-math:2.3.2'
    // discord
    implementation 'net.dv8tion:JDA:5.0.0-beta.19'
    // fuzzy string matching
    implementation 'me.xdrop:fuzzywuzzy:1.4.0'
    // charts
    implementation 'org.jfree:jfreechart:1.5.4'

    // apple
    implementation 'discord.util:discorddcf:1.0-SNAPSHOT'
    implementation 'apple.lib:applemodules:2.0-SNAPSHOT'
    implementation "apple.utilities:AppleUtilities:1.4-SNAPSHOT"
    implementation 'apple.lib:AppleEbeanDatabase:1.1-SNAPSHOT'
}
mainClassName = 'com.ambrosia.loans.Ambrosia'

shadowJar {
    manifest {
        attributes 'Multi-Release': true
    }
    doLast {
        copy {
            from getArchiveFile()
            into file(botsBuildDir + "/AmbrosiaLoans")
        }
    }
}